syntax = "proto3";
package proto;

option go_package = "model/specialmessage";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

service Special {
  // 创建消息
  rpc CreateSpecialMessage(PushMessage) returns (SpecialMessageResponse) {
    option (google.api.http) = {
      post: "/v1/admin/createSpecialMessage"
      body: "*"
    };
  }
  // 获取某天消息
  rpc ReadSpecialMessage(ReadRequest) returns (SpecialMessageResponse) {
    option (google.api.http) = {
      get: "/v1/admin/readSpecialMessage"
    };
  }

  // 更新消息
  rpc UpdateSpecialMessage(PushMessage) returns (SpecialMessageResponse) {
    option (google.api.http) = {
      put: "/v1/admin/updateSpecialMessage"
      body: "*"
    };
  }

  // 获取所有的消息列表
  rpc ReadAllSpecialMessages(ReadAllListRequest) returns (ReadAllListResponse) {
    option (google.api.http) = {
      post: "/v1/admin/readAllSpecialMessages"
      body: "*"
    };
  }

  // 删除某天消息
  rpc DeleteSpecialMessage(DeleteMessageRequest) returns (DeleteMessageResponse) {
    option (google.api.http) = {
      delete: "/v1/admin/deleteSpecialMessage"
    };
  }

  // 上传图片
  rpc UploadImageSpecialMessage(UploadMessageRequest) returns (UploadMessageResponse) {
    option (google.api.http) = {
      post: "/v1/admin/uploadImageSpecialMessage"
      body: "*"
    };
  }

  // 删除 mediaId
  rpc DeleteMediaIdSpecialMessage(DeleteMessageRequest) returns (DeleteMessageResponse) {
    option (google.api.http) = {
      post: "/v1/admin/deleteMediaIdSpecialMessage"
      body: "*"
    };
  }

  // 后台消息任务获取消息模版
  rpc GetMessageForTaskSpecialMessage(GetMessageForTaskRequest) returns (GetMessageForTaskResponse) {
    option (google.api.http) = {
      get: "/v1/admin/getMessageForTaskSpecialMessage"
    };
  }
}

message PushMessage{
  int32 id = 1;
  string appCode = 2;
  string pushDate = 3;
  string festivalName = 4;
  string firstSentence = 5;
  string specialMessage = 6;
  string mediaId = 7;
  string imageUrl = 8;
  int32 status = 9;
  int32 types = 10;
  google.protobuf.Timestamp created_at = 11 [json_name="created_at"];
  google.protobuf.Timestamp updated_at = 12 [json_name="updated_at"];
}

message QueryCondition{
  string appCode = 1;
  string pushDate = 2;
  int32 status = 3;
  int32 types = 4;
}

// 查询/新增/更新单条记录
message SpecialMessageResponse{
  int32 code = 1;
  string msg = 2;
  PushMessage pushMessage = 3;
}

//查询单条记录
message ReadRequest{
  int32 id = 1;
}

//删除单条记录
message DeleteMessageRequest{
  int32 id = 2;
}

// 删除单条记录
message DeleteMessageResponse{
  int32 code = 1;
  string msg = 2;
}

// 所有消息-分页
message ReadAllListRequest {
  int32 page = 1;
  int32 page_size = 2;
  QueryCondition queryParams = 3;
}

message ReadAllListResponse {
  int32 code = 1;
  string msg = 2;
  ReadAllList data = 3;
}

// 上传图片请求参数
message UploadMessageRequest{
  int32 id = 1;
  string image = 2;
}

// 上传图片返回参数
message UploadMessageResponse{
  int32 code = 1;
  string msg = 2;
  string mediaId = 3;
  string url = 4;
  int32 id = 5;
}

message ReadAllList {
  int32 page = 1;
  int32 page_size = 2 [json_name="page_size"];
  int32 total_page = 3 [json_name="total_page"];
  int32 total_count = 4 [json_name="total_count"];
  repeated PushMessage list = 5;
}

// 后台消息任务请求参数
message GetMessageForTaskRequest{
  string appCode = 1;
  string pushDate = 2;
  int32 types = 3;
}

// 后台消息任务返回参数
message GetMessageForTaskResponse{
  int32 code = 1;
  string msg = 2;
  string mediaId = 3;
  string pushMessage = 4;
}
