syntax = "proto3";
package proto;

option go_package = "model/wx_notify";

import "google/api/annotations.proto";

// WxNotifyService wechat notify service
service WxNotifyService {
  rpc SendCustomMsg (WxCustmoMsgRequest) returns (WxCustmoMsgResponse) {
    option (google.api.http) = {
      post: "/v1/WxNotifyService/SendCustomMsg"
      body: "*"
    };
  }
}

// WxCustmoMsgRequest wechat custom message request
message WxCustmoMsgRequest {
  string app_code = 1;
  string message = 2;
  bool async = 3;
}

message WxCustmoMsgResponse {
  int32 code = 1;
  string msg = 2;
}